--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Uniform — Basic Landing</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="newstyles.css" />
   <style>
     /* School Uniforms heading polish */
     .card-content h3 {
